--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/apakm/parcel-package-manager/issues"
   },
-  "homepage": "https://github.com/apakm/parcel-package-manager#readme"
+  "homepage": "https://github.com/apakm/parcel-package-manager#readme",
+  "dependencies": {
+    "archiver": "^5.3.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "rimraf": "^5.0.1"
+  }
 }
