--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aarnem/nano-db",
+  "name": "parceldb-nano",
   "version": "1.1.0",
   "description": "the most lighweight document oriented database for Node.js",
   "main": "index.js",
